--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
    <application
-        android:label="Quick Eats Vendor"
+        android:label="QE Vendor"
         android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
